# BastardBot

./: Cargo.toml  LICENSE  README.md
bastard_backend/: Cargo.toml
bastard_backend/src/: lib.rs  parser.rs  table.rs
bastard_backend/src/web_parser/: mod.rs  parser.rs  raw_table.rs
bastard_core/: Cargo.toml
bastard_core/src/: lesson.rs  lib.rs  request_params.rs  schedule_table.rs  traits.rs  types.rs
bastard_frontend/: Cargo.toml
bastard_frontend/src/: lib.rs  meal_schedule.rs  simple_formatter.rs
src/: config.rs  main.rs
telegram_system/: Cargo.toml
telegram_system/src/: lib.rs  telegram_system.rs
timetable_system/: Cargo.toml
timetable_system/src/: lib.rs  provider.rs
timetable_system/src/backend/: mod.rs
timetable_system/src/core/: day.rs  mod.rs  timetable.rs
