[package]
name = "bastard"
version = "0.1.0"
edition = "2021"
authors = ["krozzzis"]

[workspace]
members = [
    "telegram_system",
    "timetable_system",
]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
toml = "0.5"
serde = "1.0"

telegram_system = { path = "telegram_system" }
timetable_system = { path = "timetable_system" }

[dependencies.tokio]
version = "1.23"
features = [
    "rt-multi-thread",
    "macros",
]
